test/typecheck/fail/unbound_tyvar2.sail
default Order dec

$include <vector_dec.sail>

val foo : unit -> bits(definitelydoesntexist)

function foo() = {
  0b0
}
